Table users {
    user_id integer [primary key,increment,note:'ユーザーID']
    employee_no varchar(32) [not null,note:'社員番号']
    user_name varchar(32) [not null,note:'ユーザー名']
    email varchar(255) [not null,unique,note:'メールアドレス']
    password varchar(255) [not null,note:'パスワード']
    role_id integer [not null,note:'権限ID']
    created_at timestamp [not null,note:'作成日時']
    updated_at timestamp [not null,note:'更新日時']
    Note: 'ユーザー'
}

Table assets {
    asset_id integer [primary key,increment,note:'資産ID']
    asset_name varchar(100) [not null,note:'資産名']
    category_id integer [note:'カテゴリID']
    asset_type ENUM('loan','consumable') [not null,note:'資産種別']
    stock "integer unsigned" [note:'在庫数']
    min_stock "integer unsigned" [note:'最低キープ数']
    unit varchar(20) [not null,note:'単位']
    max_request_quantity integer [note:'最大申請数']
    monthly_request_limit integer [note:'申請頻度']
    created_at timestamp [not null,note:'作成日時']
    updated_at timestamp [not null,note:'更新日時']
    Note: '資産'
}

Table loan_histories {
    loan_history_id integer [primary key,increment,note:'利用履歴ID']
    user_id integer [not null,note:'ユーザーID']
    asset_id integer [not null,note:'資産ID']
    loan_date datetime [not null,note:'貸出日']
    due_date date [not null,note:'返却予定日']
    return_date datetime [note:'返却日']
    created_at timestamp [not null,note:'作成日時']
    updated_at timestamp [not null,note:'更新日時']
    Note: '貸出履歴'
}

Table consumable_histories {
    consumable_history_id integer [primary key,increment,note:'利用履歴ID']
    user_id integer [not null,note:'ユーザーID']
    asset_id integer [not null,note:'資産ID']
    request_date datetime [not null,note:'申請日']
    quantity "integer unsigned" [not null,note: '数量']
    created_at timestamp [not null,note:'作成日時']
    updated_at timestamp [not null,note:'更新日時']
    Note: '取得履歴'
}

Table loan_categories {
    category_id integer [primary key,increment,note:'カテゴリID']
    category_name varchar(50) [not null,unique,note:'カテゴリ名']
    created_at timestamp [not null,note:'作成日時']
    updated_at timestamp [not null,note:'更新日時']
    max_loan_days integer [not null,note:'最大貸出期間']
    Note: '貸出資産カテゴリマスタ'
}

Table csv_files {
    csv_file_id integer [primary key,increment,note:'CSVファイルID']
    file_name varchar(255) [not null,note:'ファイル名']
    target_period_start date [not null,note:'対象年月']
    record_count "integer unsigned" [not null,note:'出力件数']
    generated_at datetime [not null,note:'生成日時']
    updated_at timestamp [not null,note:'更新日時']
    Note: 'csvファイル情報'
}

Table roles {
    role_id integer [primary key,increment,note:'権限ID']
    role_name varchar(50) [not null,unique,note:'権限名']
    created_at timestamp [not null,note:'作成日時']
    updated_at timestamp [not null,note:'更新日時']
    Note: '権限'
}

Ref: users.role_id>roles.role_id
Ref: assets.category_id > loan_categories.category_id
Ref: loan_histories.user_id> users.user_id
Ref: loan_histories.asset_id> assets.asset_id
Ref: consumable_histories.user_id>users.user_id
Ref: consumable_histories.asset_id>assets.asset_id

Records users(user_id,employee_no,user_name,email,password,role_id)
{
    1,'1','taro tanaka','tarotanaka@example.com', 'abc12345!', 1
}

Records assets(asset_name,category_id,asset_type,stock,min_stock,unit,max_request_quantity,monthly_request_limit)
{
    'Laptop PC', 1, 'loan', null, null, '台', null, null
    'Lenovo PC', 2, 'loan', null, null, '台', null, null
    'ボールペン', null, 'consumable', 10, 5, '本', 2, 1
    'ノート', null, 'consumable', 5, 1, '冊', 5, 1
}

Records loan_histories(user_id,asset_id,loan_date,due_date, return_date)
{
    1, 2, `now() - interval '10 days'`, `now() + interval '4 days'`, null
    1, 3, `now() - interval '20 days'`, `now() - interval '6 days'`, `now() - interval '8 days'`
}

Records loan_categories(category_id,category_name,created_at,updated_at,max_loan_days)
{
    1, 'PC',`now()`, `now()`,14
    2, '書籍', `now()`, `now()`,14
    3, '機器',`now()`, `now()`, 30
}

Records roles(role_id,role_name)
{
    1,'管理者'
    2,'一般社員'
}
